left sidebar: Fix clipping of private message users with "g" in name.
This fixes an issue where users whose names had a "g" in them would
have the "g" clipped in the "private messages" section in the left sidebar.

We avoid a change in the effective visible line-height by shrinking
the margin.

--- a/static/styles/left-sidebar.css
+++ b/static/styles/left-sidebar.css
@@ -204,12 +204,16 @@ li.active-sub-filter {
 .conversation-partners,
 .topic-name {
     display: block;
-    line-height: 1.1;
     width: calc(100% - 5px);
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     padding-right: 2px;
+}
+
+.topic-name {
+    /* TODO: We should figure out how to remove this without changing the spacing */
+    line-height: 1.1;
 }
 
 .left-sidebar li a.topic-name:hover {
@@ -368,7 +372,7 @@ li.expanded_private_message {
 }
 
 li.expanded_private_message a {
-    margin: 2px 0px;
+    margin: 1px 0px;
 }
 
 .show-all-streams a {
